# CircuitPython_stat

./: LICENSE  README.rst  README.rst.license  pyproject.toml  relic_stat.py  requirements.txt  stat.py
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: stat_simpletest.py
